# ASETmarker

./: .dockerignore  .env.example  .gitignore  ASETMarker.spec  DEPLOYMENT.md  Dockerfile  GITHUB_SECRETS.md  README.md  docker-compose.yml  main.py  main_gui.py  milestones.md  pyproject.toml  requirements.dev.txt  requirements.txt  zz left to do.md
.github/workflows/: azure-deploy.yml  build-push-ghcr.yml  (+1 more)
Prompts/: milestone0.md  milestone1.md  milestone3.md  milestone4.md  milestone5.md  movingtochatfromcopilotforprompting.md
config/: __init__.py  aset_qrar_template.json  aset_reading_template.json  concepts_senior.json  concepts_year4_5.json  report_template.docx  ~$port_template.docx
desktop/: pipeline.py
docs/: Year 5 ASET Performance Report Exam 4 December 2025.docx  ar_answer_key.csv  ar_sample_answer_key.txt  nexttime.md  qr_sample_answer_key.txt  reading_answer_key.csv  reading_sample_answer_key.txt  sample_answer_key.csv  sample_answer_key.txt  sample_concept_mapping.json  sample_manifest.json  seniorsampleconcepts.json  year8concepts.json
scripts/: build_macos.sh  build_windows.bat  build_windows.ps1  measure_template.py  run_dev.py  run_windows.bat  run_windows_client.bat  setup_env.py
src/: core.py
tests/: conftest.py  test_auth.py  test_concept_ordering.py  test_desktop_pipeline_inputs.py  test_docx_report.py  test_docx_report_rendering.py  test_marker_preprocessors.py  test_merged_document_splitter.py  test_qrar_score_layout.py  test_routes.py  test_services.py
web/: __init__.py  app.py  auth.py  config.py  dependencies.py  session_store.py
(+34 files in other folders)
